navbar resize bug from scrollbar: fixed

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
     min-height: 100vh;
     background-color: #181A1A;
     color: white;
+    scrollbar-gutter: stable;
 }
 
 .navbar {
